--- a/index.html
+++ b/index.html
@@ -13,28 +13,30 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
 
     <style type="text/css">
-      .nav-item {
+      .navbar p {
         font-size: 2em;
-        padding-left: 550px;
         font-weight: bold;
       }
+
+      .centered {
+        text-align: center;
+      }
+
+      .body {
+        margin-top: 100px;
+      }
+
+
     </style>
   </head>
   <body>
-    <nav class="navbar navbar-light" style="background-color: #e3f2fd;">
-      <ul class="nav navbar-nav">
-        <li class="nav-item active">
-          <a class="nav-link" href="#">Trivia</a>
-        </li>
-      </ul>
+    <nav class="navbar navbar-light centered" style="background-color: #e3f2fd;">
+          <p class="nav-link" href="#">Trivia</p>
     </nav>
-
     <div class="container-fluid body">
-        <h3>George Washington was the first president of United States</h3>
-        <h3>Hunter College is located at Queens</h3>
-        <h3>The abacus was invented by the Incas</h3>
-        <h3>The year 2000 bug resulted from an error in the assembly of transistors for IBM computers</h3>
-        <h3></h3>
+      <div class="centered">
+        <a class="btn btn-info-outline btn-lg " align="middle">Begin Quiz!!!</a>
+      </div>
     </div>
 
     <!-- jQuery first, then Bootstrap JS. -->
