--- a/index.html
+++ b/index.html
@@ -35,11 +35,12 @@
     </nav>
     <div class="container-fluid body">
       <div class="centered">
-        <a class="btn btn-info-outline btn-lg " align="middle">Begin Quiz!!!</a>
+        <a class="btn btn-info-outline btn-lg " align="middle" id="begin_quiz_button">Begin Quiz!!!</a>
       </div>
     </div>
 
     <!-- jQuery first, then Bootstrap JS. -->
+    <script type="text/javascript" href= "Trivia.js"></script>>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.2/js/bootstrap.min.js" integrity="sha384-vZ2WRJMwsjRMW/8U7i6PWi6AlO1L79snBrmgiDpgIWJ82z8eA5lenwvxbMV1PAh7" crossorigin="anonymous"></script>
   </body>
