--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
     <nav class="navbar navbar-light centered" style="background-color: #e3f2fd;">
           <p class="nav-link" href="#">Trivia</p>
     </nav>
+
     <div class="container-fluid body">
       <div class="centered">
         <a class="btn btn-info-outline btn-lg " align="middle" id="begin_quiz_button">Begin Quiz!!!</a>
@@ -40,7 +41,7 @@
     </div>
 
     <!-- jQuery first, then Bootstrap JS. -->
-    <script type="text/javascript" href= "Trivia.js"></script>>
+    <script type="text/javascript" src="js/Trivia.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.2/js/bootstrap.min.js" integrity="sha384-vZ2WRJMwsjRMW/8U7i6PWi6AlO1L79snBrmgiDpgIWJ82z8eA5lenwvxbMV1PAh7" crossorigin="anonymous"></script>
   </body>
