Adds BeginQuiz button functionality

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       }
 
       .body {
-        margin-top: 100px;
+        margin-top: 70px;
       }
 
 
@@ -36,9 +36,18 @@
 
     <div class="container-fluid body">
       <div class="centered">
-        <a class="btn btn-info-outline btn-lg " align="middle" id="begin_quiz_button">Begin Quiz!!!</a>
+
+        <div id="begin_quiz_div">
+          <a class="btn btn-info-outline btn-lg " align="middle" id="begin_quiz_button">Begin Quiz!!!</a>
+        </div>
+
+        <div id="question">
+
+        </div>
+
       </div>
     </div>
+
 
     <!-- jQuery first, then Bootstrap JS. -->
     <script type="text/javascript" src="js/Trivia.js"></script>
