Makes the begin quiz button invisible and the question, radio buttons appear.

--- a/index.html
+++ b/index.html
@@ -40,11 +40,19 @@
         <div id="begin_quiz_div">
           <a class="btn btn-info-outline btn-lg " align="middle" id="begin_quiz_button">Begin Quiz!!!</a>
         </div>
+          <div class="init_invisible">
+            <div id="question">
 
-        <div id="question">
+            </div>
+            <div id = "choices">
+                <input type="radio" name="answer" value="true"> True<br>
+                <input type="radio" name="answer" value="false"> False<br>
+            </div>
 
-        </div>
-
+            <div id="submit_answer_button" class="btn btn-sm btn-primary-outline">
+              Submit answer
+            </div>
+          </div>  
       </div>
     </div>
 
